fix(nav): Improve spacing of nav items

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -141,7 +141,7 @@ header {
 
   nav {
     display: flex;
-    gap: .5rem;
+    gap: .8rem;
 
     a {
       text-decoration: none;
